# merkle-airdropper

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json  tsconfig.json
app/: airdrop-data.json  cleanup.py  go-live.js  go-live.ts  main.js  main.ts  main2.js
app/utils/: balance_tree.js  balance_tree.ts  index.js  index.ts  merkle_tree.js  merkle_tree.ts
programs/merkle-airdrop/: Cargo.toml
programs/merkle-airdrop/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/merkle-airdrop/src/processor/: claim_token.rs  initialize_airdrop_state.rs  mod.rs  withdraw_tokens_from_vault.rs
tests/: merkle-airdrop.js  merkle-airdrop.ts
